--- a/BankingApp/Logic/Logic.csproj
+++ b/BankingApp/Logic/Logic.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Abstractisations\Abstractisations.csproj" />
+  </ItemGroup>
+
 </Project>
