--- a/BankingApp/BankingApp/appsettings.json
+++ b/BankingApp/BankingApp/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "BankingAppContextConnection": "Server=(localdb)\\mssqllocaldb;Database=BankingApp;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
