--- a/BankingApp/appsettings.json
+++ b/BankingApp/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "BankingAppContextConnection": "Server=(localdb)\\mssqllocaldb;Database=BankingApp;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "BankingAppContextConnection": "Server=(localdb)\\mssqllocaldb;Database=BankingApp1;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
